Added GameView using fxml